--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-ssh-sftp": "git://github.com/shaqian/react-native-ssh-sftp.git"
   },
   "devDependencies": {
